更新docker-compose.yml中的端口映射，修改exceptions.py中的异常类名称，更新mcp/server.py中的文档字符串为中文并调整相关注释以增强可读性。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
-version: '3'
+version: "3"
 
 services:
   micro_agent:
     build: .
     container_name: micro_agent
     ports:
-      - "8010:5000"
-      - "18000:8000"
+      - "5010:5000"
+      - "8010:8000"
       - "2222:22"
     volumes:
       - .:/app
-    stdin_open: true  # 保持标准输入开启
-    tty: true  # 分配伪终端
+    stdin_open: true # 保持标准输入开启
+    tty: true # 分配伪终端
     restart: unless-stopped
