--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-    # 文档构建和推送镜像
+  # 文档构建和推送镜像
   build-docs:
     runs-on: ubuntu-latest
     steps:
@@ -23,3 +23,20 @@ jobs:
         run: |
           docker build -t polarsnowleopard/ioeb-docs:latest ./docs
           docker push polarsnowleopard/ioeb-docs:latest
+
+  build-Agent:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build and push macro-agent Docker image
+        run: |
+          docker build -t polarsnowleopard/macro-agent:latest ./deploy
+          docker push polarsnowleopard/macro-agent:latest
