--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -33,7 +33,7 @@ RUN mkdir -p /var/run/sshd \
 WORKDIR /app 
  
 # Copy the current directory contents into the container at /app 
-COPY .. /app 
+COPY . /app 
  
 # Install any needed packages specified in requirements.txt 
 RUN pip install -r requirements.txt 
