fix: streamline start.sh execution in Dockerfile

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -41,7 +41,6 @@ RUN pip install -r requirements.txt
  
 # Make port 5000 available to the world outside this container 
 EXPOSE 8010 22 8000
- 
-COPY start.sh /start.sh
-RUN chmod +x /start.sh
-CMD ["/start.sh"]
+
+RUN chmod +x start.sh
+CMD ["./start.sh"]
