--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -3,10 +3,38 @@ name: Deploy to Server
 on:
   push:
     branches:
-      # - master
-      zfy
+      - master
 
 jobs:
+  # 测试阶段
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        # with:
+        #   python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Test with pytest
+        run: |
+          pytest tests --cov=app --cov-report=xml
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          fail_ci_if_error: false
+
   # 文档构建和推送镜像
   build-docs:
     runs-on: ubuntu-latest
