feat: 把main.py中的示例修改成使用课题一GNN模型的金融风险分析智能体

--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
       "connection_type": "stdio",
       "server_url": null,
       "command": "python",
-      "args": ["-m", "app.mcp.time_server"],
+      "args": ["-m", "app.mcp.aml_server.server"],
       "server_id": null
     }
   ]
